@@ -373,7 +373,6 @@ kdev_t dev;
 void iput(inode)
 REGOPT struct inode * inode;
 {
-	register struct super_operations * sop = inode->i_sb->s_op;
 	if (inode) {
 		wait_on_inode(inode);
 		if (!inode->i_count) {
@@ -399,10 +398,13 @@ repeat:
 		}
 #endif	
 
-		if (inode->i_sb && sop && sop->put_inode) {
-			sop->put_inode(inode);
-			if (!inode->i_nlink)
-				return;
+		if (inode->i_sb) {
+			struct super_operations *sop = inode->i_sb->s_op;
+			if (sop && sop->put_inode) {
+				sop->put_inode(inode);
+				if (!inode->i_nlink)
+					return;
+			}
 		}
 
 		if (inode->i_dirt) {
